--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=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
-HUGGINGFACEHUB_API_TOKEN=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
+OPENAI_API_KEY=
+HUGGINGFACEHUB_API_TOKEN=
