--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,13 @@ pytube
 yt_dlp
 matplotlib
 plotly
+scipy
 # # uncomment to use huggingface llms
-# huggingface-hub==0.14.1
+huggingface-hub==0.14.1
 
 # # uncomment to use instructor embeddings
-# InstructorEmbedding==1.0.1
-# sentence-transformers==2.2.2
+InstructorEmbedding==1.0.1
+sentence-transformers==2.2.2
 
 # torch==1.11.0
 # transformers==4.11.3
