--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ celerybeat.pid
 # Environments
 
 .venv
+.env
 env/
 venv/
 ENV/
@@ -152,3 +153,6 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+./vars/.env
+.env
+.env
