--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ plotly
 scipy
 moviepy
 streamlit
-whisper
+
 # # uncomment to use huggingface llms
 huggingface-hub==0.14.1
 
@@ -32,3 +32,4 @@ sentence-transformers==2.2.2
 # imblearn
 
 git+https://github.com/pyannote/pyannote-audio
+git+https://github.com/openai/whisper.git 
